	  from known positions instead of strlen; limit scope of some variables,
	  allowing them to be defined as const
	* cobc.c (print_88_values, print_fields, xref_88_values, xref_fields):
	  drop copy of field name to temporary lcl_name as a field name has
	  a maximum length of COB_MAX_WORDLEN (63) and therefore is always smaller
	  than the previously compared 80-1 byte
	* cobc.c, config.c, scanner.l, tree.c, reserved.c: favor strcpy, memcpy,
	  over strncpy
	* typeck.c (cb_build_debug_item): refactored to remove number of casts
	* field.c (copy_duplicated_field_into_field): extracted
	  from copy_children, copy_into_field_recursive

2022-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (function): attach ref-mod to all kind of functions to consume
	  them here and to pass invalid ref-mod for all numeric intrinsics to
	  cb_build_intrinsic enable us to create a nice diagnostic
	* cobc.c, flag.def: do not imply -fsource-location with -g any more (but
	  still with --debug and -ftrace-all); imply -fsource-location with -fdump
	* codegen.c: don't output source location for -fdump -fno-source-location

2022-09-30  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* codegen.c, cconv.h, cconv.c: extract EBCDIC & ASCII conversion tables
	  to a dedicated module
	* codegen.c: factorize functions for outputting conversion tables
	* flag.def, help.c: add -febcdic-table flag to customize EBCDIC
	  translation

2022-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_identifier): fix codegen for odo-check
	  on level 01 OCCURS items, bug introduced with 2022-07-12
	* pplex.l: dropped check for "spurious '$'", fixing bug #839
	  and acucomment not handling $ correct
	* flag.def (cb_flag_stack_extended), cobc.c: new option "stack-extended"
	* codegen.c: handle generation for new cb_flag_stack_extended with
	  cob_frame_ext (attached origin source location, section and paragraph
	  name) and its addition to the cob_module